--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | NFT preview card component</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <img
+        class="hero-img"
+        src="./images/image-equilibrium.jpg"
+        alt="NFT preview"
+      />
+      <header>
+        <h1>Equilibrium #3429</h1>
+      </header>
 
-  Equilibrium #3429
+      <main>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
 
-  Our Equilibrium collection promotes balance and calm.
+        <div>
+          <div>0.041 ETH</div>
+          <div>3 days left</div>
+        </div>
+      </main>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+      <hr />
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <footer>
+        <img src="" alt="" />
+        <p>Creation of <span>Jules Wyvern</span></p>
+      </footer>
+    </div>
+  </body>
 </html>
