--- a/index.html
+++ b/index.html
@@ -17,29 +17,36 @@
   </head>
   <body>
     <div class="container">
-      <img
-        class="hero-img"
-        src="./images/image-equilibrium.jpg"
-        alt="NFT preview"
-      />
+      <div class="hero-img">
+        <img src="./images/image-equilibrium.jpg" alt="NFT preview" />
+      </div>
       <header>
-        <h1>Equilibrium #3429</h1>
+        <h1>
+          <a href="#">Equilibrium #3429</a>
+        </h1>
       </header>
 
       <main>
         <p>Our Equilibrium collection promotes balance and calm.</p>
 
-        <div>
-          <div>0.041 ETH</div>
-          <div>3 days left</div>
+        <div class="wrapper">
+          <div class="product-price">
+            <img src="./images/icon-ethereum.svg" alt="ethereum icon" />
+            <span>0.041 ETH</span>
+          </div>
+
+          <div class="product-countdown">
+            <img src="./images/icon-clock.svg" alt="clock icon" />
+            <span>3 days left</span>
+          </div>
         </div>
       </main>
 
       <hr />
 
       <footer>
-        <img src="" alt="" />
-        <p>Creation of <span>Jules Wyvern</span></p>
+        <img src="./images/image-avatar.png" alt="product-creator" />
+        <p>Creation of <a href="#">Jules Wyvern</a></p>
       </footer>
     </div>
   </body>
