Fixed accessibility issues

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="hero-img">
-        <img src="./images/image-equilibrium.jpg" alt="NFT preview" />
-      </div>
+      <banner>
+        <div class="hero-img">
+          <img src="./images/image-equilibrium.jpg" alt="NFT preview" />
+        </div>
+      </banner>
+
       <header>
         <h1>
           <a href="#">Equilibrium #3429</a>
